--- a/DH_BugTracker/Views/TicketNotify/Delete.cshtml
+++ b/DH_BugTracker/Views/TicketNotify/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UnRead)
+            @Html.DisplayNameFor(model => model.IsRead)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UnRead)
+            @Html.DisplayFor(model => model.IsRead)
         </dd>
 
     </dl>
