--- a/DH_BugTracker/Views/TicketNotify/Create.cshtml
+++ b/DH_BugTracker/Views/TicketNotify/Create.cshtml
@@ -24,11 +24,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UnRead, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IsRead, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.UnRead)
-                    @Html.ValidationMessageFor(model => model.UnRead, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.IsRead)
+                    @Html.ValidationMessageFor(model => model.IsRead, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
