--- a/DH_BugTracker/Views/Account/ConfirmationSent.cshtml
+++ b/DH_BugTracker/Views/Account/ConfirmationSent.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ConfirmationSent";
-    Layout = null;
+    Layout = "~/Views/Shared/_LoginShared.cshtml";
 }
 
 <h2>ConfirmationSent</h2>
