--- a/DH_BugTracker/Views/Home/Dashboard.cshtml
+++ b/DH_BugTracker/Views/Home/Dashboard.cshtml
@@ -25,7 +25,7 @@
 @section scripts{
 
 
-    <script>
+    @*<script>
         $(function () {
             var url = '@Url.Action("Chart1Data", "Graphing")';
             $.post(url).then(function (response) {
@@ -41,7 +41,7 @@
 
 
         })
-    </script>
+    </script>*@
     
     
 }
