--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -215,11 +215,10 @@
 
 
 
+    <!--   Core JS Files   -->
+    <script src="~/Scripts/popper.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    <!--   Core JS Files   -->
-    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-    <script src="~/Scripts/popper.min.js"></script>
     <script src="~/Scripts/bootstrap-material-design.min.js"></script>
     <script src="~/Scripts/perfect-scrollbar.jquery.min.js"></script>
     <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
@@ -251,7 +250,7 @@
     <!-- Library for adding dinamically elements -->
     <script src="~/Scripts/arrive.min.js"></script>
     <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    @*<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>*@
     <!-- Chartist JS -->
     <script src="~/Scripts/chartist.min.js"></script>
     <!--  Notifications Plugin    -->
