--- a/DH_BugTracker/Views/Account/ForgotPassword.cshtml
+++ b/DH_BugTracker/Views/Account/ForgotPassword.cshtml
@@ -1,89 +1,44 @@
 ﻿@model DH_BugTracker.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgotten password?";
-    Layout = null;
+    Layout = "~/Views/Shared/_LoginShared.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Login for DH_BugTracker</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Content/icon-font.min.css" rel="stylesheet" />
-    <link href="~/Content/animate.css" rel="stylesheet" />
-    <link href="~/Content/hamburgers.min.css" rel="stylesheet" />
-    <link href="~/Content/animsition.min.css" rel="stylesheet" />
-    <link href="~/Content/select2.min.css" rel="stylesheet" />
-    <link href="~/Content/daterangepicker.css" rel="stylesheet" />
-    <link href="~/Content/util.css" rel="stylesheet" />
-    <link href="~/Content/main.css" rel="stylesheet" />
-    <!--===============================================================================================-->
-</head>
-<body>
-
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
-                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "login100-form form-horizontal validate-form", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <span class="login100-form-title p-b-33">
-                        @ViewBag.Title
-                    </span>
-                    @Html.ValidationSummary("", new { @class = "text-danger" })
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control input100", placeholder = "Email" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                        <span class="focus-input100-1"></span>
-                        <span class="focus-input100-2"></span>
-                    </div>
-                    <div class="container-login100-form-btn m-t-20 form-group">
-                        <button type="submit" class="login100-form-btn">
-                            Send Email
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-45 p-b-4">
-                        <span class="txt1">
-                            Go back to
-                        </span>
-                        <a class="txt2 hov1">
-                            <u>@Html.ActionLink("Login", "Login")</u>
-                        </a>
-                    </div>
-
-                    <div class="text-center">
-                        <span class="txt1">
-                            Create an account?
-                        </span>
-                        <a class="txt2 hov1">
-                            <u>@Html.ActionLink("Sign Up", "Register")</u>
-                        </a>
-                    </div>
-
-                }
-            </div>
-        </div>
+@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "login100-form form-horizontal validate-form", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    <span class="login100-form-title p-b-33">
+        @ViewBag.Title
+    </span>
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+        @Html.TextBoxFor(m => m.Email, new { @class = "form-control input100", placeholder = "Email" })
+        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        <span class="focus-input100-1"></span>
+        <span class="focus-input100-2"></span>
+    </div>
+    <div class="container-login100-form-btn m-t-20 form-group">
+        <button type="submit" class="login100-form-btn">
+            Send Email
+        </button>
     </div>
 
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-    <!--===============================================================================================-->
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/animsition.min.js"></script>
-    <script src="~/Scripts/popper.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/select2.min.js"></script>
-    <script src="~/Scripts/moment.min.js"></script>
-    <script src="~/Scripts/daterangepicker.js"></script>
-    <script src="~/Scripts/countdowntime.js"></script>
-    <script src="~/Scripts/main.js"></script>
-    <!--===============================================================================================-->
+    <div class="text-center p-t-45 p-b-4">
+        <span class="txt1">
+            Go back to
+        </span>
+        <a class="txt2 hov1">
+            <u>@Html.ActionLink("Login", "Login")</u>
+        </a>
+    </div>
 
-</body>
-</html>
+    <div class="text-center">
+        <span class="txt1">
+            Create an account?
+        </span>
+        <a class="txt2 hov1">
+            <u>@Html.ActionLink("Sign Up", "Register")</u>
+        </a>
+    </div>
+
+}
