--- a/DH_BugTracker/Views/Account/NewRegister.cshtml
+++ b/DH_BugTracker/Views/Account/NewRegister.cshtml
@@ -1,59 +1,14 @@
 ﻿@{
     ViewBag.Title = "New User Registration";
-    Layout = null;
+    Layout = "~/Views/Shared/_LoginShared.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Login for DH_BugTracker</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Content/icon-font.min.css" rel="stylesheet" />
-    <link href="~/Content/animate.css" rel="stylesheet" />
-    <link href="~/Content/hamburgers.min.css" rel="stylesheet" />
-    <link href="~/Content/animsition.min.css" rel="stylesheet" />
-    <link href="~/Content/select2.min.css" rel="stylesheet" />
-    <link href="~/Content/daterangepicker.css" rel="stylesheet" />
-    <link href="~/Content/util.css" rel="stylesheet" />
-    <link href="~/Content/main.css" rel="stylesheet" />
-    <!--===============================================================================================-->
-</head>
-<body>
-
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
-                <span class="login100-form-title p-b-33">
-                    @ViewBag.Title
-                </span>
-                <div class="row">
-                    <div class="col-lg-8 col-md-10 mx-auto d-flex justify-content-center">
-                        Thank you for registering. Be on the lookout for a confirmation email,
-                        and when you receive the email click the link and log in!
-                    </div>
-                </div>
-            </div>
-        </div>
+<span class="login100-form-title p-b-33">
+    @ViewBag.Title
+</span>
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto d-flex justify-content-center">
+        Thank you for registering. Be on the lookout for a confirmation email,
+        and when you receive the email click the link and log in!
     </div>
-
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-    <!--===============================================================================================-->
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/animsition.min.js"></script>
-    <script src="~/Scripts/popper.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/select2.min.js"></script>
-    <script src="~/Scripts/moment.min.js"></script>
-    <script src="~/Scripts/daterangepicker.js"></script>
-    <script src="~/Scripts/countdowntime.js"></script>
-    <script src="~/Scripts/main.js"></script>
-    <!--===============================================================================================-->
-
-</body>
-</html>
+</div>
