--- a/DH_BugTracker/Views/Account/ResendEmailConfirmation.cshtml
+++ b/DH_BugTracker/Views/Account/ResendEmailConfirmation.cshtml
@@ -1,10 +1,8 @@
 ﻿@model DH_BugTracker.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
-    Layout = null;
+    Layout = "~/Views/Shared/_LoginShared.cshtml";
 }
-
-<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ResendEmailConfirmation", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -23,8 +21,4 @@
             <input type="submit" class="btn btn-default" value="Email Link" />
         </div>
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
