--- a/DH_BugTracker/Views/Ticket/Index.cshtml
+++ b/DH_BugTracker/Views/Ticket/Index.cshtml
@@ -26,13 +26,13 @@
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayName("Developer Assigned")
-                            </th>
-                            <th>
-                                @Html.DisplayName("User Created")
+                                @Html.DisplayNameFor(model => model.Title)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Project.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayName("Developer Assigned")
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.TicketPriority.Name)
@@ -44,16 +44,7 @@
                                 @Html.DisplayNameFor(model => model.TicketType.Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Title)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
-                            <th>
                                 @Html.DisplayNameFor(model => model.Created)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Updated)
                             </th>
                             <th></th>
                         </tr>
@@ -63,14 +54,15 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.AssignedToUser.FullName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.OwnerUser.FullName)
+                                    @Html.DisplayFor(modelItem => item.Title)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Project.Name)
                                 </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.AssignedToUser.FullName)
+                                </td>
+
                                 <td>
                                     @Html.DisplayFor(modelItem => item.TicketPriority.Name)
                                 </td>
@@ -81,28 +73,22 @@
                                     @Html.DisplayFor(modelItem => item.TicketType.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Title)
+                                    @Html.DisplayFor(modelitem => item.Created)
                                 </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Created)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Updated)
-                                </td>
-                                <td>
-                                    @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin") ||
-                                         User.IsInRole("Project Manager") || User.IsInRole("Demo_Project Manager"))
-                                    {
-                                        <u>@Html.ActionLink("Edit/Assign", "Edit", new { id = item.Id })</u>
-                                    }
-                                    else
-                                    {
-                                        <u>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</u>
-                                    }
-                                    <u>@Html.ActionLink("Details", "Details", new { id = item.Id })</u>
+                                <td class="d-flex justify-content-end">
+                                    <ul>
+                                        @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin") ||
+                                                User.IsInRole("Project Manager") || User.IsInRole("Demo_Project Manager"))
+                                        {
+                                            <li>@Html.ActionLink("Edit/Assign", "Edit", new { id = item.Id })</li>
+                                            
+                                        }
+                                        else if (User.IsInRole("Submitter") || User.IsInRole("Demo_Submitter"))
+                                        {
+                                            <li>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</li>
+                                        }
+                                        <li>@Html.ActionLink("Details", "Details", new { id = item.Id })</li>
+                                    </ul>
                                 </td>
                             </tr>
                         }
